Fix link glitch for WorksPage. Fix overflow on WorksPage project #2.

--- a/src/Components/AboutPage/AboutPage.css
+++ b/src/Components/AboutPage/AboutPage.css
@@ -1,4 +1,5 @@
 .about-page-container {
+    min-height: 90vh;
     width: 100%;
     color: whitesmoke;
 }
